--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpg" href="/client/src/assets/SOURCE.jpg" />
+    <link rel="icon" type="image/jpg" href="./src/assets/SOURCE.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SOURCE</title>
   </head>
